--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Pomodoro Timer",
   "author": "@frekans7",
   "description": "Pomodoro Timer App",
-  "version": "1.0",
+  "version": "1.1",
   "icons": {
     "16": "pomodoro.png",
     "48": "pomodoro.png",
     "128": "pomodoro.png"
   },
   "background": {
-    "scripts": ["chrome/background.js"]
+    "service_worker": "chrome/background.js"
   },
-  "browser_action": {
+  "action": {
     "default_title": "Pomodoro",
     "default_icon": "pomodoro.png"
   },
-  "permissions": ["tabs", "storage", "notifications"]
+  "permissions": ["notifications"]
 }
